LF_Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.3 from foo.ly
-----------------------------------------------------------------------------

state 21 contains 1 shift/reduce conflicts.
state 23 contains 12 shift/reduce conflicts.
state 118 contains 2 shift/reduce conflicts.
state 140 contains 2 shift/reduce conflicts.
state 142 contains 2 shift/reduce conflicts.
state 156 contains 1 shift/reduce conflicts.
state 308 contains 2 shift/reduce conflicts.
state 345 contains 2 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_lf_parser -> start                          (0)
	start -> top_command                               (1)
	top_command -> JUST_PARSE top_command              (2)
	top_command -> tactical                            (3)
	top_command -> DEFS_DECLS defs_decs                (4)
	top_command -> ']' definitions                     (5)
	top_command -> "Cut" cut_expressions               (6)
	top_command -> "Claim" claim_opt_id typing         (7)
	top_command -> "Goal" claim_opt_id typing          (8)
	top_command -> "module" ID "where"                 (9)
	top_command -> coercion_declaration                (10)
	top_command -> universe_declaration                (11)
	top_command -> declare_elim_rule                   (12)
	top_command -> declare_inductive_type              (13)
	top_command -> function_by_clauses                 (14)
	top_command -> ctxt_cmd                            (15)
	top_command -> term_cmd                            (16)
	ctxt_cmd -> "Ctxt" id_or_opt_num                   (17)
	term_cmd -> infixexp                               (18)
	term_cmd -> "Normal" infixexp                      (19)
	term_cmd -> infixexp conv_cmd                      (20)
	term_cmd -> '<' defs_decs '>' infixexp conv_cmd    (21)
	conv_cmd -> '=' infixexp                           (22)
	conv_cmd -> "==" infixexp                          (23)
	defs_decs -> defs_decs def_or_dec                  (24)
	defs_decs -> def_or_dec                            (25)
	def_or_dec -> declaration                          (26)
	def_or_dec -> definition                           (27)
	declarations -> declarations declaration           (28)
	declarations ->                                    (29)
	declaration -> '[' decl_id_list typing ']'         (30)
	definitions -> definitions definition              (31)
	definitions ->                                     (32)
	definition -> '[' decl_id_list typing '=' infixexp ']'   (33)
	definition -> '[' decl_id_list pre_bindings '=' infixexp opt_typing ']'   (34)
	pre_bindings -> pre_bindings pre_binding           (35)
	pre_bindings ->                                    (36)
	pre_binding -> '[' list_of_idOr_ typing ']'        (37)
	decl_id_list -> decl_id_list ',' ctxt_name         (38)
	decl_id_list -> ctxt_name                          (39)
	cut_expressions -> cut_expressions cut_expression   (40)
	cut_expressions ->                                 (41)
	cut_expression -> '[' ctxt_name '=' exp ']'        (42)
	coercion_declaration -> "Coercion" opt_coercion_parameters opt_coercion_prerequisites '=' infixexp opt_typing   (43)
	opt_coercion_parameters -> "Parameters" declarations   (44)
	opt_coercion_parameters ->                         (45)
	opt_coercion_prerequisites -> "Prerequisites" decl_id_list   (46)
	opt_coercion_prerequisites ->                      (47)
	declare_inductive_type -> "Inductive" declarations declaration inductive_parameters "Constructors" declarations   (48)
	inductive_parameters -> inductive_parameters inductive_parameter   (49)
	inductive_parameters ->                            (50)
	inductive_parameter -> WANT_IND                    (51)
	inductive_parameter -> THEOREMS                    (52)
	inductive_parameter -> "Relation"                  (53)
	inductive_parameter -> "Relation_LE"               (54)
	inductive_parameter -> "AlsoLift"                  (55)
	inductive_parameter -> NO_DISCHARGE                (56)
	declare_elim_rule -> ELIM_RULE ctxt_name comp_rules   (57)
	declare_elim_rule -> SIMPLE_ELIM ctxt_name ctxt_name NUM simple_c_rules   (58)
	comp_rules -> comp_rules '[' infixexp '=' infixexp typing ']'   (59)
	comp_rules ->                                      (60)
	simple_c_rules -> simple_c_rules '[' ctxt_name NUM '=' infixexp typing ']'   (61)
	simple_c_rules ->                                  (62)
	function_by_clauses -> fn_def                      (63)
	fn_def -> BEGINF clauses opt_where ENDF            (64)
	clauses -> clause clauses_                         (65)
	clauses_ -> ',' clause clauses_                    (66)
	clauses_ ->                                        (67)
	opt_where -> "where" more_defs                     (68)
	opt_where ->                                       (69)
	more_defs -> more_defs fn_def                      (70)
	more_defs ->                                       (71)
	clause -> ctxt_name term_list '=' infixexp         (72)
	term_list -> list_term term_list                   (73)
	term_list -> list_term                             (74)
	list_term -> exp                                   (75)
	tactical -> basic_cmd                              (76)
	tactical -> tactical THEN_T tactical               (77)
	tactical -> tactical ELSE_T tactical               (78)
	tactical -> '(' tactical ')'                       (79)
	basic_cmd -> id_or_opt_num "Refine" infixexp       (80)
	basic_cmd -> id_or_opt_num "Intros" intros_args    (81)
	basic_cmd -> id_or_opt_num "Intros" '{' exp '}' intros_args   (82)
	basic_cmd -> id_or_opt_num "Induction" id_or_num   (83)
	basic_cmd -> id_or_opt_num "Equiv" infixexp        (84)
	basic_cmd -> id_or_opt_num "Immed"                 (85)
	basic_cmd -> id_or_opt_num "Assumption"            (86)
	id_or_opt_num -> id_or_num                         (87)
	id_or_opt_num ->                                   (88)
	id_or_num -> ctxt_name                             (89)
	id_or_num -> NUM                                   (90)
	claim_opt_id -> ctxt_name                          (91)
	claim_opt_id ->                                    (92)
	intros_args -> intros_args idOr_                   (93)
	intros_args ->                                     (94)
	universe_declaration -> finite_universe            (95)
	universe_declaration -> infinite_universe          (96)
	universe_declaration -> decl_in_universe           (97)
	decl_in_universe -> "AddToUniverse" UNIV_ID ctxt_name   (98)
	decl_in_universe -> "AddToUniverse" ':' exp '>' exp '>' ctxt_name   (99)
	universe_opts -> universe_opts "Cumulative"        (100)
	universe_opts -> universe_opts "Closed"            (101)
	universe_opts ->                                   (102)
	infinite_universe -> universe_opts "InfiniteUniverse" univ_base univ_or_id univ_or_id   (103)
	univ_base -> '{' ID '=' infixexp ',' infixexp '}'   (104)
	univ_or_id -> UNIV_ID                              (105)
	univ_or_id -> ID                                   (106)
	finite_universe -> universe_opts "FiniteUniverse" univ_or_id '{' universe_contents '}'   (107)
	universe_contents -> universe_contents ',' finite_universe   (108)
	universe_contents -> universe_contents ',' univ_decl   (109)
	universe_contents ->                               (110)
	univ_decl -> '[' ID '=' infixexp ']'               (111)
	ctxt_name -> ID                                    (112)
	ctxt_name -> '(' OP ')'                            (113)
	exp -> infixexp                                    (114)
	exp -> infixexp cast infixexp                      (115)
	cast -> "::"                                       (116)
	cast -> ":!:"                                      (117)
	infixexp -> exp10                                  (118)
	infixexp -> infixexp qop exp10                     (119)
	qop -> OP                                          (120)
	qop -> '`' ID '`'                                  (121)
	qop -> '`' ID OP qop_aux '`'                       (122)
	qop_aux -> OP                                      (123)
	qop_aux -> ID                                      (124)
	qop_aux -> ID OP qop_aux                           (125)
	exp10 -> fexp                                      (126)
	exp10 -> '[' ctxt_name '=' exp ']' infixexp        (127)
	exp10 -> case_expression                           (128)
	exp10 -> manifest_rec                              (129)
	exp10 -> exp10 "with" ctxt_name '=' aexp           (130)
	manifest_rec -> "str" '<' exp defn_fields '>'      (131)
	manifest_rec -> "sig" '<' exp sig_fields '>'       (132)
	decl_field -> ',' ctxt_name ':' exp                (133)
	defn_field -> ',' ctxt_name '=' exp ':' exp        (134)
	sig_field -> decl_field                            (135)
	sig_field -> defn_field                            (136)
	defn_fields -> defn_field defn_fields              (137)
	defn_fields -> defn_field                          (138)
	sig_fields -> sig_field sig_fields                 (139)
	sig_fields -> sig_field                            (140)
	fexp -> fexp aexp                                  (141)
	fexp -> aexp                                       (142)
	aexp -> "Type"                                     (143)
	aexp -> "kind"                                     (144)
	aexp -> "El" parenthesis_initial_expr              (145)
	aexp -> "El" ID                                    (146)
	aexp -> "El" UNIV_ID                               (147)
	aexp -> "El" METAVAR_ID                            (148)
	aexp -> ID                                         (149)
	aexp -> METAVAR_ID                                 (150)
	aexp -> UNIV_ID                                    (151)
	aexp -> binding infixexp                           (152)
	aexp -> parenthesis_initial_expr                   (153)
	parenthesis_initial_expr -> '(' termOr_ parenthesis_end   (154)
	parenthesis_initial_expr -> '(' OP ')'             (155)
	termOr_ -> exp                                     (156)
	termOr_ -> '_'                                     (157)
	parenthesis_end -> dollar_terms ')'                (158)
	parenthesis_end -> commaterms_maybe_dp             (159)
	dollar_terms -> '$' infixexp more_dollar_terms     (160)
	more_dollar_terms -> '$' infixexp more_dollar_terms   (161)
	more_dollar_terms ->                               (162)
	commaterms_maybe_dp -> commaterms dp_ending        (163)
	commaterms_maybe_dp -> commaterms ')'              (164)
	commaterms -> ',' termOr_ commaterms               (165)
	commaterms ->                                      (166)
	dp_ending -> typing ')' opt_dp_arrow infixexp      (167)
	opt_dp_arrow -> OP                                 (168)
	opt_dp_arrow ->                                    (169)
	list_of_idOr_ -> list_of_idOr_ ',' idOr_           (170)
	list_of_idOr_ -> idOr_                             (171)
	idOr_ -> ID                                        (172)
	idOr_ -> '_'                                       (173)
	bind_var -> list_of_idOr_ typing                   (174)
	typing -> ':' infixexp                             (175)
	typing -> ':' "El" '$' infixexp                    (176)
	opt_typing -> typing                               (177)
	opt_typing ->                                      (178)
	binding -> BID bind_var ']'                        (179)
	binding -> bracket_binding opt_arrow               (180)
	opt_arrow ->                                       (181)
	bracket_binding -> '[' bind_var ']'                (182)
	bracket_binding -> '{' bind_var '}'                (183)
	bracket_binding -> '<' bind_var '>'                (184)
	bracket_binding -> OPEN bind_var CLOSE             (185)
	case_expression -> "case" term_list "of" '{' case_arms '}'   (186)
	case_arms -> case_arm ',' case_arms                (187)
	case_arms -> case_arm                              (188)
	case_arm -> term_list '=' exp                      (189)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	NUM            { TokenNum $$ }
	DEFS_DECLS     { TokenDefsDecls }
	BEGINF         { TokenBeginFunction }
	ENDF           { TokenEndFunction }
	"module"       { TokenModule }
	"Coercion"     { TokenCoercion }
	"Parameters"   { TokenParameters }
	"Prerequisites"{ TokenPrerequisites }
	"where"        { TokenWhere }
	"Refine"       { TokenRefine }
	"Intros"       { TokenIntros }
	"Induction"    { TokenInduction }
	"Assumption"   { TokenAssumption }
	"Immed"        { TokenImmed }
	"Equiv"        { TokenEquiv }
	"Inductive"    { TokenInductive }
	"Constructors" { TokenConstructors }
	WANT_IND       { TokenWantInd }
	THEOREMS       { TokenTheorems }
	"Relation"     { TokenRelation }
	"Relation_LE"  { TokenRelation_LE }
	"AlsoLift"     { TokenAlsoLift }
	NO_DISCHARGE   { TokenNoDischarge }
	ELIM_RULE      { TokenElimRule }
	SIMPLE_ELIM    { TokenSimpleElimRule }
	"Cut"          { TokenKeyword "Cut" }
	"Claim"        { TokenKeyword "Claim" }
	"Goal"         { TokenKeyword "Goal" }
	ELSE_T         { TokenElse_T }
	THEN_T         { TokenThen_T }
	"Normal"       { TokenNormal }
	"Ctxt"         { TokenCtxt }
	JUST_PARSE     { TokenJustParse }
	"FiniteUniverse"{ TokenFiniteUniverse }
	"InfiniteUniverse"{ TokenInfiniteUniverse }
	"AddToUniverse"{ TokenAddToUniverse }
	"Cumulative"   { TokenCumulative }
	"Closed"       { TokenClosed }
	"kind"         { TokenKind }
	"Type"         { TokenType }
	"El"           { TokenEl }
	"case"         { TokenCase }
	"of"           { TokenOf }
	"with"         { TokenWith }
	"sig"          { TokenSig }
	"str"          { TokenStr }
	"::"           { TokenColonColon }
	":!:"          { TokenColonExclColon }
	'_'            { TokenUnderSc }
	':'            { TokenColon }
	'='            { TokenEq }
	','            { TokenComma }
	'$'            { TokenDollar }
	"=="           { TokenSymbol "==" }
	'`'            { TokenBacktick }
	'('            { TokenOP }
	')'            { TokenCP }
	'['            { TokenOB }
	']'            { TokenCB }
	'<'            { TokenOA }
	'>'            { TokenCA }
	'{'            { TokenOpenBracket  ("{","}") }
	'}'            { TokenCloseBracket ("{","}") }
	OPEN           { TokenOpenBracket $$ }
	CLOSE          { TokenCloseBracket $$ }
	ID             { TokenId $$ }
	BID            { TokenBindId $$ }
	METAVAR_ID     { TokenMeta $$ }
	UNIV_ID        { TokenUniv $$ }
	OP             { TokenSymbol $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_lf_parser rule  0
	start           rule  1
	top_command     rules 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16
	ctxt_cmd        rule  17
	term_cmd        rules 18, 19, 20, 21
	conv_cmd        rules 22, 23
	defs_decs       rules 24, 25
	def_or_dec      rules 26, 27
	declarations    rules 28, 29
	declaration     rule  30
	definitions     rules 31, 32
	definition      rules 33, 34
	pre_bindings    rules 35, 36
	pre_binding     rule  37
	decl_id_list    rules 38, 39
	cut_expressions rules 40, 41
	cut_expression  rule  42
	coercion_declaration rule  43
	opt_coercion_parameters rules 44, 45
	opt_coercion_prerequisites rules 46, 47
	declare_inductive_type rule  48
	inductive_parameters rules 49, 50
	inductive_parameter rules 51, 52, 53, 54, 55, 56
	declare_elim_rule rules 57, 58
	comp_rules      rules 59, 60
	simple_c_rules  rules 61, 62
	function_by_clauses rule  63
	fn_def          rule  64
	clauses         rule  65
	clauses_        rules 66, 67
	opt_where       rules 68, 69
	more_defs       rules 70, 71
	clause          rule  72
	term_list       rules 73, 74
	list_term       rule  75
	tactical        rules 76, 77, 78, 79
	basic_cmd       rules 80, 81, 82, 83, 84, 85, 86
	id_or_opt_num   rules 87, 88
	id_or_num       rules 89, 90
	claim_opt_id    rules 91, 92
	intros_args     rules 93, 94
	universe_declaration rules 95, 96, 97
	decl_in_universe rules 98, 99
	universe_opts   rules 100, 101, 102
	infinite_universe rule  103
	univ_base       rule  104
	univ_or_id      rules 105, 106
	finite_universe rule  107
	universe_contents rules 108, 109, 110
	univ_decl       rule  111
	ctxt_name       rules 112, 113
	exp             rules 114, 115
	cast            rules 116, 117
	infixexp        rules 118, 119
	qop             rules 120, 121, 122
	qop_aux         rules 123, 124, 125
	exp10           rules 126, 127, 128, 129, 130
	manifest_rec    rules 131, 132
	decl_field      rule  133
	defn_field      rule  134
	sig_field       rules 135, 136
	defn_fields     rules 137, 138
	sig_fields      rules 139, 140
	fexp            rules 141, 142
	aexp            rules 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153
	parenthesis_initial_expr rules 154, 155
	termOr_         rules 156, 157
	parenthesis_end rules 158, 159
	dollar_terms    rule  160
	more_dollar_terms rules 161, 162
	commaterms_maybe_dp rules 163, 164
	commaterms      rules 165, 166
	dp_ending       rule  167
	opt_dp_arrow    rules 168, 169
	list_of_idOr_   rules 170, 171
	idOr_           rules 172, 173
	bind_var        rule  174
	typing          rules 175, 176
	opt_typing      rules 177, 178
	binding         rules 179, 180
	opt_arrow       rule  181
	bracket_binding rules 182, 183, 184, 185
	case_expression rule  186
	case_arms       rules 187, 188
	case_arm        rule  189

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	NUM            shift, and enter state 29
	DEFS_DECLS     shift, and enter state 30
	BEGINF         shift, and enter state 31
	"module"       shift, and enter state 32
	"Coercion"     shift, and enter state 33
	"Refine"       reduce using rule 88
	"Intros"       reduce using rule 88
	"Induction"    reduce using rule 88
	"Assumption"   reduce using rule 88
	"Immed"        reduce using rule 88
	"Equiv"        reduce using rule 88
	"Inductive"    shift, and enter state 34
	ELIM_RULE      shift, and enter state 35
	SIMPLE_ELIM    shift, and enter state 36
	"Cut"          shift, and enter state 37
	"Claim"        shift, and enter state 38
	"Goal"         shift, and enter state 39
	"Normal"       shift, and enter state 40
	"Ctxt"         shift, and enter state 41
	JUST_PARSE     shift, and enter state 42
	"FiniteUniverse"reduce using rule 102
	"InfiniteUniverse"reduce using rule 102
	"AddToUniverse"shift, and enter state 43
	"Cumulative"   reduce using rule 102
	"Closed"       reduce using rule 102
	"kind"         shift, and enter state 44
	"Type"         shift, and enter state 45
	"El"           shift, and enter state 46
	"case"         shift, and enter state 47
	"sig"          shift, and enter state 48
	"str"          shift, and enter state 49
	'('            shift, and enter state 50
	'['            shift, and enter state 51
	']'            shift, and enter state 52
	'<'            shift, and enter state 53
	'{'            shift, and enter state 54
	OPEN           shift, and enter state 55
	ID             shift, and enter state 56
	BID            shift, and enter state 57
	METAVAR_ID     shift, and enter state 58
	UNIV_ID        shift, and enter state 59

	start          goto state 60
	top_command    goto state 2
	ctxt_cmd       goto state 3
	term_cmd       goto state 4
	coercion_declarationgoto state 5
	declare_inductive_typegoto state 6
	declare_elim_rulegoto state 7
	function_by_clausesgoto state 8
	fn_def         goto state 9
	tactical       goto state 10
	basic_cmd      goto state 11
	id_or_opt_num  goto state 12
	id_or_num      goto state 13
	universe_declarationgoto state 14
	decl_in_universegoto state 15
	universe_opts  goto state 16
	infinite_universegoto state 17
	finite_universegoto state 18
	ctxt_name      goto state 19
	infixexp       goto state 20
	exp10          goto state 21
	manifest_rec   goto state 22
	fexp           goto state 23
	aexp           goto state 24
	parenthesis_initial_exprgoto state 25
	binding        goto state 26
	bracket_bindinggoto state 27
	case_expressiongoto state 28

State 1


	NUM            shift, and enter state 29
	DEFS_DECLS     shift, and enter state 30
	BEGINF         shift, and enter state 31
	"module"       shift, and enter state 32
	"Coercion"     shift, and enter state 33
	"Inductive"    shift, and enter state 34
	ELIM_RULE      shift, and enter state 35
	SIMPLE_ELIM    shift, and enter state 36
	"Cut"          shift, and enter state 37
	"Claim"        shift, and enter state 38
	"Goal"         shift, and enter state 39
	"Normal"       shift, and enter state 40
	"Ctxt"         shift, and enter state 41
	JUST_PARSE     shift, and enter state 42
	"AddToUniverse"shift, and enter state 43
	"kind"         shift, and enter state 44
	"Type"         shift, and enter state 45
	"El"           shift, and enter state 46
	"case"         shift, and enter state 47
	"sig"          shift, and enter state 48
	"str"          shift, and enter state 49
	'('            shift, and enter state 50
	'['            shift, and enter state 51
	']'            shift, and enter state 52
	'<'            shift, and enter state 53
	'{'            shift, and enter state 54
	OPEN           shift, and enter state 55
	ID             shift, and enter state 56
	BID            shift, and enter state 57
	METAVAR_ID     shift, and enter state 58
	UNIV_ID        shift, and enter state 59

	top_command    goto state 2
	ctxt_cmd       goto state 3
	term_cmd       goto state 4
	coercion_declarationgoto state 5
	declare_inductive_typegoto state 6
	declare_elim_rulegoto state 7
	function_by_clausesgoto state 8
	fn_def         goto state 9
	tactical       goto state 10
	basic_cmd      goto state 11
	id_or_opt_num  goto state 12
	id_or_num      goto state 13
	universe_declarationgoto state 14
	decl_in_universegoto state 15
	universe_opts  goto state 16
	infinite_universegoto state 17
	finite_universegoto state 18
	ctxt_name      goto state 19
	infixexp       goto state 20
	exp10          goto state 21
	manifest_rec   goto state 22
	fexp           goto state 23
	aexp           goto state 24
	parenthesis_initial_exprgoto state 25
	binding        goto state 26
	bracket_bindinggoto state 27
	case_expressiongoto state 28

State 2

	start -> top_command .                              (rule 1)

	%eof           reduce using rule 1


State 3

	top_command -> ctxt_cmd .                           (rule 15)

	%eof           reduce using rule 15


State 4

	top_command -> term_cmd .                           (rule 16)

	%eof           reduce using rule 16


State 5

	top_command -> coercion_declaration .               (rule 10)

	%eof           reduce using rule 10


State 6

	top_command -> declare_inductive_type .             (rule 13)

	%eof           reduce using rule 13


State 7

	top_command -> declare_elim_rule .                  (rule 12)

	%eof           reduce using rule 12


State 8

	top_command -> function_by_clauses .                (rule 14)

	%eof           reduce using rule 14


State 9

	function_by_clauses -> fn_def .                     (rule 63)

	%eof           reduce using rule 63


State 10

	top_command -> tactical .                           (rule 3)
	tactical -> tactical . THEN_T tactical              (rule 77)
	tactical -> tactical . ELSE_T tactical              (rule 78)

	ELSE_T         shift, and enter state 138
	THEN_T         shift, and enter state 139
	%eof           reduce using rule 3


State 11

	tactical -> basic_cmd .                             (rule 76)

	ELSE_T         reduce using rule 76
	THEN_T         reduce using rule 76
	')'            reduce using rule 76
	%eof           reduce using rule 76


State 12

	basic_cmd -> id_or_opt_num . "Refine" infixexp      (rule 80)
	basic_cmd -> id_or_opt_num . "Intros" intros_args    (rule 81)
	basic_cmd -> id_or_opt_num . "Intros" '{' exp '}' intros_args    (rule 82)
	basic_cmd -> id_or_opt_num . "Induction" id_or_num    (rule 83)
	basic_cmd -> id_or_opt_num . "Equiv" infixexp       (rule 84)
	basic_cmd -> id_or_opt_num . "Immed"                (rule 85)
	basic_cmd -> id_or_opt_num . "Assumption"           (rule 86)

	"Refine"       shift, and enter state 132
	"Intros"       shift, and enter state 133
	"Induction"    shift, and enter state 134
	"Assumption"   shift, and enter state 135
	"Immed"        shift, and enter state 136
	"Equiv"        shift, and enter state 137


State 13

	id_or_opt_num -> id_or_num .                        (rule 87)

	"Refine"       reduce using rule 87
	"Intros"       reduce using rule 87
	"Induction"    reduce using rule 87
	"Assumption"   reduce using rule 87
	"Immed"        reduce using rule 87
	"Equiv"        reduce using rule 87
	%eof           reduce using rule 87


State 14

	top_command -> universe_declaration .               (rule 11)

	%eof           reduce using rule 11


State 15

	universe_declaration -> decl_in_universe .          (rule 97)

	%eof           reduce using rule 97


State 16

	universe_opts -> universe_opts . "Cumulative"       (rule 100)
	universe_opts -> universe_opts . "Closed"           (rule 101)
	infinite_universe -> universe_opts . "InfiniteUniverse" univ_base univ_or_id univ_or_id    (rule 103)
	finite_universe -> universe_opts . "FiniteUniverse" univ_or_id '{' universe_contents '}'    (rule 107)

	"FiniteUniverse"shift, and enter state 128
	"InfiniteUniverse"shift, and enter state 129
	"Cumulative"   shift, and enter state 130
	"Closed"       shift, and enter state 131


State 17

	universe_declaration -> infinite_universe .         (rule 96)

	%eof           reduce using rule 96


State 18

	universe_declaration -> finite_universe .           (rule 95)

	%eof           reduce using rule 95


State 19

	id_or_num -> ctxt_name .                            (rule 89)

	"Refine"       reduce using rule 89
	"Intros"       reduce using rule 89
	"Induction"    reduce using rule 89
	"Assumption"   reduce using rule 89
	"Immed"        reduce using rule 89
	"Equiv"        reduce using rule 89
	ELSE_T         reduce using rule 89
	THEN_T         reduce using rule 89
	')'            reduce using rule 89
	%eof           reduce using rule 89


State 20

	term_cmd -> infixexp .                              (rule 18)
	term_cmd -> infixexp . conv_cmd                     (rule 20)
	infixexp -> infixexp . qop exp10                    (rule 119)

	'='            shift, and enter state 124
	"=="           shift, and enter state 125
	'`'            shift, and enter state 126
	OP             shift, and enter state 127
	%eof           reduce using rule 18

	conv_cmd       goto state 122
	qop            goto state 123

State 21

	infixexp -> exp10 .                                 (rule 118)
	exp10 -> exp10 . "with" ctxt_name '=' aexp          (rule 130)

	ENDF           reduce using rule 118
	"where"        reduce using rule 118
	ELSE_T         reduce using rule 118
	THEN_T         reduce using rule 118
	"kind"         reduce using rule 118
	"Type"         reduce using rule 118
	"El"           reduce using rule 118
	"case"         reduce using rule 118
	"of"           reduce using rule 118
	"with"         shift, and enter state 121
			(reduce using rule 118)

	"sig"          reduce using rule 118
	"str"          reduce using rule 118
	"::"           reduce using rule 118
	":!:"          reduce using rule 118
	':'            reduce using rule 118
	'='            reduce using rule 118
	','            reduce using rule 118
	'$'            reduce using rule 118
	"=="           reduce using rule 118
	'`'            reduce using rule 118
	'('            reduce using rule 118
	')'            reduce using rule 118
	'['            reduce using rule 118
	']'            reduce using rule 118
	'<'            reduce using rule 118
	'>'            reduce using rule 118
	'{'            reduce using rule 118
	'}'            reduce using rule 118
	OPEN           reduce using rule 118
	CLOSE          reduce using rule 118
	ID             reduce using rule 118
	BID            reduce using rule 118
	METAVAR_ID     reduce using rule 118
	UNIV_ID        reduce using rule 118
	OP             reduce using rule 118
	%eof           reduce using rule 118


State 22

	exp10 -> manifest_rec .                             (rule 129)

	ENDF           reduce using rule 129
	"where"        reduce using rule 129
	ELSE_T         reduce using rule 129
	THEN_T         reduce using rule 129
	"kind"         reduce using rule 129
	"Type"         reduce using rule 129
	"El"           reduce using rule 129
	"case"         reduce using rule 129
	"of"           reduce using rule 129
	"with"         reduce using rule 129
	"sig"          reduce using rule 129
	"str"          reduce using rule 129
	"::"           reduce using rule 129
	":!:"          reduce using rule 129
	':'            reduce using rule 129
	'='            reduce using rule 129
	','            reduce using rule 129
	'$'            reduce using rule 129
	"=="           reduce using rule 129
	'`'            reduce using rule 129
	'('            reduce using rule 129
	')'            reduce using rule 129
	'['            reduce using rule 129
	']'            reduce using rule 129
	'<'            reduce using rule 129
	'>'            reduce using rule 129
	'{'            reduce using rule 129
	'}'            reduce using rule 129
	OPEN           reduce using rule 129
	CLOSE          reduce using rule 129
	ID             reduce using rule 129
	BID            reduce using rule 129
	METAVAR_ID     reduce using rule 129
	UNIV_ID        reduce using rule 129
	OP             reduce using rule 129
	%eof           reduce using rule 129


State 23

	exp10 -> fexp .                                     (rule 126)
	fexp -> fexp . aexp                                 (rule 141)

	ENDF           reduce using rule 126
	"where"        reduce using rule 126
	ELSE_T         reduce using rule 126
	THEN_T         reduce using rule 126
	"kind"         shift, and enter state 44
			(reduce using rule 126)

	"Type"         shift, and enter state 45
			(reduce using rule 126)

	"El"           shift, and enter state 46
			(reduce using rule 126)

	"case"         reduce using rule 126
	"of"           reduce using rule 126
	"with"         reduce using rule 126
	"sig"          reduce using rule 126
	"str"          reduce using rule 126
	"::"           reduce using rule 126
	":!:"          reduce using rule 126
	':'            reduce using rule 126
	'='            reduce using rule 126
	','            reduce using rule 126
	'$'            reduce using rule 126
	"=="           reduce using rule 126
	'`'            reduce using rule 126
	'('            shift, and enter state 91
			(reduce using rule 126)

	')'            reduce using rule 126
	'['            shift, and enter state 120
			(reduce using rule 126)

	']'            reduce using rule 126
	'<'            shift, and enter state 84
			(reduce using rule 126)

	'>'            reduce using rule 126
	'{'            shift, and enter state 54
			(reduce using rule 126)

	'}'            reduce using rule 126
	OPEN           shift, and enter state 55
			(reduce using rule 126)

	CLOSE          reduce using rule 126
	ID             shift, and enter state 92
			(reduce using rule 126)

	BID            shift, and enter state 57
			(reduce using rule 126)

	METAVAR_ID     shift, and enter state 58
			(reduce using rule 126)

	UNIV_ID        shift, and enter state 59
			(reduce using rule 126)

	OP             reduce using rule 126
	%eof           reduce using rule 126

	aexp           goto state 119
	parenthesis_initial_exprgoto state 25
	binding        goto state 26
	bracket_bindinggoto state 27

State 24

	fexp -> aexp .                                      (rule 142)

	ENDF           reduce using rule 142
	"where"        reduce using rule 142
	ELSE_T         reduce using rule 142
	THEN_T         reduce using rule 142
	"kind"         reduce using rule 142
	"Type"         reduce using rule 142
	"El"           reduce using rule 142
	"case"         reduce using rule 142
	"of"           reduce using rule 142
	"with"         reduce using rule 142
	"sig"          reduce using rule 142
	"str"          reduce using rule 142
	"::"           reduce using rule 142
	":!:"          reduce using rule 142
	':'            reduce using rule 142
	'='            reduce using rule 142
	','            reduce using rule 142
	'$'            reduce using rule 142
	"=="           reduce using rule 142
	'`'            reduce using rule 142
	'('            reduce using rule 142
	')'            reduce using rule 142
	'['            reduce using rule 142
	']'            reduce using rule 142
	'<'            reduce using rule 142
	'>'            reduce using rule 142
	'{'            reduce using rule 142
	'}'            reduce using rule 142
	OPEN           reduce using rule 142
	CLOSE          reduce using rule 142
	ID             reduce using rule 142
	BID            reduce using rule 142
	METAVAR_ID     reduce using rule 142
	UNIV_ID        reduce using rule 142
	OP             reduce using rule 142
	%eof           reduce using rule 142


State 25

	aexp -> parenthesis_initial_expr .                  (rule 153)

	ENDF           reduce using rule 153
	"where"        reduce using rule 153
	ELSE_T         reduce using rule 153
	THEN_T         reduce using rule 153
	"kind"         reduce using rule 153
	"Type"         reduce using rule 153
	"El"           reduce using rule 153
	"case"         reduce using rule 153
	"of"           reduce using rule 153
	"with"         reduce using rule 153
	"sig"          reduce using rule 153
	"str"          reduce using rule 153
	"::"           reduce using rule 153
	":!:"          reduce using rule 153
	':'            reduce using rule 153
	'='            reduce using rule 153
	','            reduce using rule 153
	'$'            reduce using rule 153
	"=="           reduce using rule 153
	'`'            reduce using rule 153
	'('            reduce using rule 153
	')'            reduce using rule 153
	'['            reduce using rule 153
	']'            reduce using rule 153
	'<'            reduce using rule 153
	'>'            reduce using rule 153
	'{'            reduce using rule 153
	'}'            reduce using rule 153
	OPEN           reduce using rule 153
	CLOSE          reduce using rule 153
	ID             reduce using rule 153
	BID            reduce using rule 153
	METAVAR_ID     reduce using rule 153
	UNIV_ID        reduce using rule 153
	OP             reduce using rule 153
	%eof           reduce using rule 153


State 26

	aexp -> binding . infixexp                          (rule 152)

	"kind"         shift, and enter state 44
	"Type"         shift, and enter state 45
	"El"           shift, and enter state 46
	"case"         shift, and enter state 47
	"sig"          shift, and enter state 48
	"str"          shift, and enter state 49
	'('            shift, and enter state 91
	'['            shift, and enter state 51
	'<'            shift, and enter state 84
	'{'            shift, and enter state 54
	OPEN           shift, and enter state 55
	ID             shift, and enter state 92
	BID            shift, and enter state 57
	METAVAR_ID     shift, and enter state 58
	UNIV_ID        shift, and enter state 59

	infixexp       goto state 118
	exp10          goto state 21
	manifest_rec   goto state 22
	fexp           goto state 23
	aexp           goto state 24
	parenthesis_initial_exprgoto state 25
	binding        goto state 26
	bracket_bindinggoto state 27
	case_expressiongoto state 28

State 27

	binding -> bracket_binding . opt_arrow              (rule 180)

	"kind"         reduce using rule 181
	"Type"         reduce using rule 181
	"El"           reduce using rule 181
	"case"         reduce using rule 181
	"sig"          reduce using rule 181
	"str"          reduce using rule 181
	'('            reduce using rule 181
	'['            reduce using rule 181
	'<'            reduce using rule 181
	'{'            reduce using rule 181
	OPEN           reduce using rule 181
	ID             reduce using rule 181
	BID            reduce using rule 181
	METAVAR_ID     reduce using rule 181
	UNIV_ID        reduce using rule 181

	opt_arrow      goto state 117

State 28

	exp10 -> case_expression .                          (rule 128)
